Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,20 +1,22 @@
 {
   "domain": "www.shopcarlaguimaraes.com.br",
   "currency_symbol": "R$",
-  "primary_color": "#bd0267",
+  "primary_color": "#dfba28",
   "theme": {
     "bootswatch": "lux",
     "custom": "_"
   },
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/carlaguimaraes",
-  "logo": "/img/uploads/logo-1-.png",
+  "logo": "/img/uploads/shop-cg-logo.png",
   "name": "Shop Carla Guimarães",
   "short_name": "Shop Carla Guimarães",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
+  "font_family": "Montserrat",
   "favicon": "/img/uploads/favicon.jpg",
+  "icons_font": "_",
   "country_code": "BR",
   "secondary_color": "#333333",
   "icon": "/img/uploads/logo-1-.png",
