Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -15,12 +15,12 @@
   "currency": "BRL",
   "mini_logo": "",
   "font_family": "Montserrat",
-  "favicon": "/img/uploads/favicon.jpg",
+  "favicon": "/img/uploads/favicon-carla-guimaraes.png",
   "icons_font": "_",
   "country_code": "BR",
   "secondary_color": "#333333",
-  "icon": "/img/uploads/logo-1-.png",
+  "icon": "/img/uploads/shop-cg-logo.png",
   "store_id": 1123,
   "description": "Produtos de diversas marcas, campanhas promocionais, novidades e muito mais. Cadastre-se e receba nossas ofertas!!!",
-  "large_icon": "/img/uploads/logo-1-.png"
+  "large_icon": "/img/uploads/shop-cg-logo.png"
 }
